second commit added cart functionality

--- a/src/css/cards.css
+++ b/src/css/cards.css
@@ -26,4 +26,46 @@
 
 .hero-img {
   width: 100%;
+}
+
+.hero-img-thumb-container {
+  display: none !important;
+}
+
+@media only screen and (min-width: 850px) {
+  .cards-container {
+    width: -webkit-max-content;
+    width: -moz-max-content;
+    width: max-content;
+    margin: 0 auto;
+  }
+  .hero-img-div {
+    margin-left: 1em;
+    width: -webkit-max-content;
+    width: -moz-max-content;
+    width: max-content;
+  }
+  .hero-img {
+    border-radius: 1em;
+    height: 25em;
+    width: auto;
+  }
+  .hero-img-thumb-container {
+    display: flex !important;
+    gap: 1em;
+    justify-content: space-between;
+  }
+  .hero-img-thumb {
+    border-radius: 1em;
+    width: 5em;
+  }
+  .hero-img-div {
+    margin-left: unset !important;
+    width: -webkit-max-content;
+    width: -moz-max-content;
+    width: max-content;
+  }
+  .hero-img-button {
+    display: none;
+  }
 }/*# sourceMappingURL=cards.css.map */
