--- a/src/css/nav.scss
+++ b/src/css/nav.scss
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Playfair+Display:wght@400;500;700&family=Poppins:wght@400;700&display=swap");
 
 .Flex-container {
+  max-width: 1200px;
   display: flex;
   justify-content: space-between;
   padding: 1em 2em;
@@ -9,51 +10,88 @@
   width: 100%;
   margin: 0 auto;
 }
-
-.open-nav {
-  // display: unset;
-  transform: translateX(0%) !important;
-  box-shadow: 50vw 0 0em 0em rgba(53, 53, 53, 0.8);
-}
-
-.menu {
-  cursor: pointer;
-}
-
-.menu-bar {
-  // display: none;
-  position: fixed;
-  left: 0;
-  top: 0;
-  background-color: white;
-  width: 70vw;
-  height: 100vh;
-  z-index: 99;
-  transform: translateX(-100%);
-  transition: transform 0.5s ease-in-out, box-shadow 0.2s ease-in-out;
-
-  .close {
+ 
+@media only screen and (max-width: 800px) {
+  .open-nav {
+    // display: unset;
+    transform: translateX(0%) !important;
+    box-shadow: 50vw 0 0em 0em rgba(53, 53, 53, 0.8);
+  }
+  
+  .menu {
     cursor: pointer;
-    position: absolute;
-    top: 1.5em;
-    left: 1em;
+  }
+  .menu-bar {
+    // display: none;
+    position: fixed;
+    left: 0;
+    top: 0;
+    background-color: white;
+    width: 70vw;
+    height: 100vh;
+    z-index: 99;
+    transform: translateX(-100%);
+    transition: transform 0.5s ease-in-out, box-shadow 0.2s ease-in-out;
+  
+    .close {
+      cursor: pointer;
+      position: absolute;
+      top: 1.5em;
+      left: 1em;
+    }
+  
+    ul {
+      margin-top: 4em;
+      li {
+        margin: 1em;
+        list-style-type: none;
+        a {
+          // padding: 1em;
+          color: black;
+          font-size: 1.2rem;
+          font-weight: bolder;
+          text-decoration: none;
+        }
+      }
+    }
+  } 
+
+  hr{
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 801px) {
+.name-logo{
+  display: flex;
+  flex-direction: row-reverse;
+}
+.menu{
+  display: none;
+}
+
+.menu-bar{
+  margin-left: 2em;
+  .close{
+    display: none;
   }
 
-  ul {
-    margin-top: 4em;
-    li {
-      margin: 1em;
+  ul{
+    display: flex;
+    gap: 2em;
+
+    li{
       list-style-type: none;
-      a {
-        // padding: 1em;
-        color: black;
-        font-size: 1.2rem;
-        font-weight: bolder;
+
+      a{
+        color: rgb(96, 96, 96);
         text-decoration: none;
       }
     }
   }
 }
+}
+
 
 .name-logo {
   display: flex;
@@ -67,6 +105,8 @@
   font-size: 2rem;
   margin-top: -0.1em;
   font-family: "Poppins", sans-serif;
+  color: black;
+  text-decoration: unset;
 }
 
 .namebox {
@@ -86,4 +126,42 @@
 .avatar-image {
   width: 2em;
   height: 2em;
+}
+
+.cart-box-small{
+  position: relative;
+  display: flex;
+  flex-direction: row;
+}
+
+.Nber{
+  box-sizing: content-box;
+  position:  absolute;
+  text-align: center;
+  background-color: orangered;
+  border-radius: 50%;
+  right: -30%;
+  top: -40%;
+  padding: .2em;
+  width: 1.5em;
+  height: 1.5em;
+  font-size: .6em;
+  color: white;
+  font-weight: 600;
+  // background-position-x: 4em;
+  // background-position-y: 4em;
+}
+
+.cart-svg{
+  // position: absolute;
+  // align-self: center;
+}
+
+.active{
+  color: #ff7d1b !important;
+  text-decoration: none;
+}
+
+hr{
+  color: rgb(96, 96, 96);
 }
