--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -140,4 +140,8 @@ hr {
 .active {
   color: #ff7d1b !important;
   text-decoration: none;
+}
+
+.hide-at-zero-last {
+  display: none;
 }/*# sourceMappingURL=nav.css.map */
