--- a/src/css/cart.css
+++ b/src/css/cart.css
@@ -21,6 +21,7 @@
   z-index: 99;
   border-radius: 1em;
   width: 98%;
+  box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.2);
 }
 
 .cart-heading {
@@ -72,4 +73,14 @@ hr {
 
 .delete {
   cursor: pointer;
+}
+
+@media only screen and (min-width: 700px) {
+  .Cart {
+    width: 25% !important;
+    box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.2);
+  }
+  .cart-heading {
+    padding: 1em 2em;
+  }
 }/*# sourceMappingURL=cart.css.map */
