--- a/src/css/cart.scss
+++ b/src/css/cart.scss
@@ -20,6 +20,7 @@
     // border: 1px red solid;
     border-radius: 1em;
     width: 98%;
+    box-shadow: 0 0 3px 2px rgba($color: #000000, $alpha: .2);
 }
 
 .cart-heading{
@@ -75,4 +76,17 @@ hr{
 
 .delete{
     cursor: pointer;
+}
+
+@media only screen and (min-width:700px) {
+    .Cart{
+        width: 25% !important;
+        // border: 1px solid black;
+        box-shadow: 0 0 3px 2px rgba($color: #000000, $alpha: .2);
+    }
+    .cart-heading{
+        padding: 1em 2em;
+    }
+
+    
 }
