--- a/src/css/cards_big.css
+++ b/src/css/cards_big.css
@@ -10,10 +10,56 @@
 }
 
 @media only screen and (min-width: 850px) {
+  .card-big {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    z-index: 99;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+  .cards-containers {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
   .hero-img-div {
     margin-left: unset !important;
     width: -webkit-max-content;
     width: -moz-max-content;
     width: max-content;
+  }
+  .hero-img-div .hero-img-buttons {
+    box-sizing: content-box;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    background-color: white;
+    border-radius: 55%;
+    padding: 1em;
+    transform: translateY(-50%);
+    cursor: pointer;
+  }
+  .hero-img-div .button-lefts {
+    left: -1em;
+  }
+  .hero-img-div .button-rights {
+    right: 0;
+    left: unset;
+    right: -1em;
+  }
+  .hero-img-div .closer {
+    display: block;
+    position: absolute;
+    right: -0.5em;
+    top: -0.5em;
+    z-index: 999;
+    background-color: white;
+    border-radius: 55%;
+    padding: 0.4em;
+    box-sizing: content-box;
+    cursor: pointer;
   }
 }/*# sourceMappingURL=cards_big.css.map */
