--- a/src/css/cards_big.scss
+++ b/src/css/cards_big.scss
@@ -10,8 +10,63 @@
 }
 
 @media only screen and (min-width: 850px) {
+  .card-big{
+    position: absolute;
+    top: 0;
+    left:0;
+    height: 100vh;
+    width: 100vw;
+    z-index: 99;
+    background-color: rgba($color: #000000, $alpha: .5);
+  }
+
+  .cards-containers{
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%)
+  }
+
 .hero-img-div {
   margin-left: unset !important;
   width: max-content;
+
+  .hero-img-buttons{
+    box-sizing: content-box;
+    position: absolute;
+    top:50%;
+    left:0;
+    background-color: white;
+    border-radius: 55%;
+    // border: white 1em solid;
+    padding: 1em;
+    transform: translateY(-50%);
+    // height: 50%;
+    cursor: pointer;
+  }
+  
+  .button-lefts{
+    left: -1em;
+  }
+  
+  .button-rights{
+    right:0;
+    left: unset;
+    right:-1em;
+  }
+
+  .closer{
+    display: block;
+    position: absolute;
+    right:-.5em;
+    top: -.5em;
+    z-index: 999;
+    background-color: white;
+    border-radius: 55%;
+    padding: .4em;
+    box-sizing: content-box;
+    cursor: pointer;
+  }
 }
+
 }
